# pytest-demo

./: .gitignore  LICENSE  index.html  pyproject.toml  test_example.py
.github/workflows/: ci.yml
3/: index.html
3/data/: behaviors.json  packages.json  suites.csv  suites.json  timeline.json
3/export/: influxDbData.txt
3/history/: history.json
3/widgets/: categories-trend.json  duration-trend.json  executors.json  severity.json  summary.json
4/: index.html
4/data/: behaviors.csv  behaviors.json  packages.json  suites.csv  suites.json  timeline.json
4/export/: influxDbData.txt  prometheusData.txt
4/history/: duration-trend.json  history-trend.json  history.json
4/widgets/: behaviors.json  categories-trend.json  duration.json  executors.json  retry-trend.json  severity.json  suites.json  summary.json
5/: index.html
5/data/: behaviors.csv  behaviors.json  categories.json  packages.json  suites.csv  suites.json  timeline.json
5/export/: influxDbData.txt  prometheusData.txt
5/history/: history.json  retry-trend.json
5/widgets/: categories-trend.json  duration-trend.json  duration.json  environment.json  executors.json  history-trend.json  severity.json  suites.json  summary.json
6/: index.html
6/data/: behaviors.csv  behaviors.json  categories.json  packages.json  suites.csv  suites.json  timeline.json
6/export/: influxDbData.txt  prometheusData.txt
6/history/: categories-trend.json  duration-trend.json  (+2 more)
7/: index.html
last-history/: categories-trend.json  duration-trend.json  history-trend.json  history.json  retry-trend.json
(+340 files in other folders)
