[tool.poetry]
name = "pytest-demo"
version = "0.1.0"
description = ""
authors = ["chaocw <chaoc.w@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pytest = "^8.3.4"
allure-pytest = "^2.13.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
